--- a/src/NavTests/Web.config
+++ b/src/NavTests/Web.config
@@ -6,11 +6,11 @@
 
 <configuration>
   <configSections>
-    <section name="navProviders" type="NavMvc.Configuration.NavMvcConfigurationSection, NavMvc"/>
+    <section name="navmvc" type="NavMvc.Configuration.NavMvcConfiguration, NavMvc"/>
   </configSections>
-  <navProviders inactiveNavBehavior="RedirectToFirstActive">
+  <navmvc>
     <add name="reflection" type="NavMvc.Providers.ReflectionNavProvider, NavMvc" />
-  </navProviders>
+  </navmvc>
   <connectionStrings>
     <add name="ApplicationServices"
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
